--- a/project/master_implementation/pom.xml
+++ b/project/master_implementation/pom.xml
@@ -1,22 +1,19 @@
+
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.example</groupId>
-    <artifactId>distributed-system</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <parent>
+        <groupId>com.example</groupId>
+        <artifactId>distributed-system</artifactId>
+        <version>1.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
+    </parent>
+
+    <artifactId>master-implementation</artifactId>
     <packaging>jar</packaging>
 
-    <name>distributed-system</name>
-    <url>http://maven.apache.org</url>
-
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
-    </properties>
-
     <dependencies>
-        <!-- Dependencias necesarias -->
+                <!-- Dependencias necesarias -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
@@ -28,30 +25,31 @@
             <version>3.1.0</version>
         </dependency>
         <!-- Otras dependencias que puedas necesitar -->
-        <dependency> 
-            <groupId>io.fabric8</groupId> 
-            <artifactId>kubernetes-client</artifactId> 
-            <version>6.8.0</version> <!-- Verifica la última versión disponible --> 
-    </dependency> 
+        <dependency>
+            <groupId>io.kubernetes</groupId>
+            <artifactId>client-java</artifactId>
+            <version>17.0.0</version> <!-- Ajusta la versión según sea necesario -->
+        </dependency> 
+
+        <dependency>
+    <groupId>org.json</groupId>
+    <artifactId>json</artifactId>
+    <version>20240303</version>
+</dependency>
     </dependencies>
 
     <build>
+        <finalName>master-app</finalName>
         <plugins>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.2.2</version>
                 <configuration>
-                    <source>17</source>
-                    <target>17</target>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>3.1.0</version>
-                <configuration>
-                    <mainClass>com.example.Master</mainClass>
+                    <archive>
+                        <manifest>
+                            <mainClass>Master</mainClass>
+                        </manifest>
+                    </archive>
                 </configuration>
             </plugin>
         </plugins>
