--- a/project/master_implementation/k8s/cluster-role-binding.yaml
+++ b/project/master_implementation/k8s/cluster-role-binding.yaml
@@ -1,12 +1,12 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: list-pods-binding
+  name: pod-reader-binding
 subjects:
 - kind: ServiceAccount
-  name: master-serviceaccount # Asegúrate de usar el nombre correcto
-  namespace: default # Debe coincidir con el namespace del ServiceAccount
+  name: default
+  namespace: default
 roleRef:
   kind: ClusterRole
-  name: list-pods-role
+  name: pod-reader
   apiGroup: rbac.authorization.k8s.io
