--- a/project/node_implementation/k8s/generate-pods-job.yaml
+++ b/project/node_implementation/k8s/generate-pods-job.yaml
@@ -11,9 +11,26 @@ spec:
       labels:
         app: node
     spec:
+      serviceAccountName: service-account-node  # Usar el ServiceAccount ya creado
       containers:
       - name: node-container
-        image: joctan04/ds-node:latest
+        image: brendabbr2/ds-node:latest
         ports:
         - containerPort: 8081
+        volumeMounts:
+        - name: ca-certificates
+          mountPath: /var/run/secrets/kubernetes.io/serviceaccount
+          readOnly: true
       restartPolicy: Never
+      volumes:
+      - name: ca-certificates
+        projected:
+          sources:
+          - serviceAccountToken:
+              path: token
+              expirationSeconds: 3600
+          - configMap:
+              name: kube-root-ca.crt
+              items:
+              - key: ca.crt
+                path: ca.crt
