--- a/project/node_implementation/docker/Dockerfile.node
+++ b/project/node_implementation/docker/Dockerfile.node
@@ -1,12 +1,18 @@
-# Usar una imagen base de OpenJDK
 FROM openjdk:17-jdk-slim
 
-# Copiar el archivo JAR de la aplicación al contenedor
+# Copiar archivos al contenedor
 COPY target/node-app.jar /app/node.jar
 COPY entrypoint.sh /app/entrypoint.sh
+COPY tasks/ /app/tasks/
+
+# Compilar la clase IdGenerator
+RUN javac /app/tasks/IdGenerator.java
+
 # Dar permisos de ejecución al script
 RUN chmod +x /app/entrypoint.sh
+
 # Usar el script como punto de entrada
 ENTRYPOINT ["bash", "/app/entrypoint.sh"]
+
 # Exponer el puerto 8081
 EXPOSE 8081
